# mimic_screen

./: .gitignore  .gitmodules  LDA_QDA_tests.py  PCA_tests.py  README.md  alignment_analysis.py  alignment_space_stats.py  cluster_checker.py  mask_cif_bio.py  mimic_orthologs.py  multi_foldseek.py  multipanel_space_vis.py  parse_hyphy_output.py  req.txt  reworked_multipanel_space_vis.py  run_pipeline_slurm.py  run_sequential_pipeline.sh  uniprot_api_queries.py  unique_id.py
.github/workflows/: docker-build.yaml
containers/: Dockerfile.docling  Dockerfile.lit-download  Dockerfile.lit-llm  lit-download.def  lit-llm.def
data/: taxon_id_list.txt
evorate_workflow/: Snakefile
evorate_workflow/config/: config.yaml  hp_config.yaml  hp_config2.yaml  lp_config.yaml  lp_config2.yaml  wmel_config.yaml  wmel_config2.yaml
evorate_workflow/data/: helicobacter_0.2FFPA.txt  helicobacter_ALL.txt  helicobacter_test.txt  hp_all_candidates.txt  hp_noncandidate_accessions.txt  wmel_ALL.txt  (+8 more)
prompts/: default_instructions.txt
slurm/: cpu_download_node.slurm  gpu_docling_node.slurm  gpu_grader_node.slurm  gpu_llm_node.slurm  lit-download.slurm  probe_container_python.slurm
src/: alignment_analysis.py  alignment_clustering.py  multi_foldseek.py  rbh_runner.py
src/auto_lit_search/journal_metric_tools/text_retrieval_failures/: Cargo.toml
src/auto_lit_search/journal_metric_tools/text_retrieval_failures/src/: cache.rs  cli.rs  doi_prefix_hints.rs  main.rs  metadata.rs  scan.rs
taxon_selection/: eutils_suite.py  fetch_proteomes.sh  strain_type_checker_bard.py  taxon_selector.py
(+53 files in other folders)
